package FactoryEdit;

public class StudentMember extends Member {
    public StudentMember() {

        memberType = "Student";
        name       = "";
        age        = "";
        address    = "";
        duration   = "";

    }
}
