@startuml

title __FACTORYEDIT's Class Diagram__\n

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.BasicMember {
          + BasicMember()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.LibraryMember {
          + LibraryMember()
          ~ startMembership()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.LoyalMember {
          + LoyalMember()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.Member {
          ~ address : String
          ~ age : String
          ~ duration : String
          ~ memberType : String
          ~ name : String
          + getMemberType()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.MemberFactory {
          ~ createMember()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.MemberFactoryDriver {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.OAPMember {
          + OAPMember()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.StudentMember {
          + StudentMember()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.UI_forFactory {
          - addressText : JTextField
          - ageText : JTextField
          - durationText : JTextField
          - memberType : JComboBox<ComboItem>
          - nameText : JTextField
          + UI_forFactory()
          + actionPerformed()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace actoryEdit {
      class FactoryEdit.UI_forFactory.ComboItem {
          - key : String
          + toString()
          ~ ComboItem()
      }
    }
  }
  

  FactoryEdit.BasicMember -up-|> FactoryEdit.Member
  FactoryEdit.LibraryMember o-- FactoryEdit.MemberFactory : factory
  FactoryEdit.LoyalMember -up-|> FactoryEdit.Member
  FactoryEdit.OAPMember -up-|> FactoryEdit.Member
  FactoryEdit.StudentMember -up-|> FactoryEdit.Member
  FactoryEdit.UI_forFactory .up.|> java.awt.event.ActionListener
  FactoryEdit.UI_forFactory -up-|> javax.swing.JFrame
  FactoryEdit.UI_forFactory +-down- FactoryEdit.UI_forFactory.ComboItem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
